--- a/golem_PT/GOLEM-EV.ipynb
+++ b/golem_PT/GOLEM-EV.ipynb
@@ -22,36 +22,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-11-05 20:49:13,664 INFO - __main__ - Finished setting up the logger.\n",
-      "2023-11-05 20:49:13,666 CRITICAL - utils.logger - Unhandled exception.\n",
+      "2023-11-05 21:01:00,721 INFO - __main__ - Finished setting up the logger.\n",
+      "2023-11-05 21:01:00,813 INFO - numexpr.utils - NumExpr defaulting to 8 threads.\n",
+      "2023-11-05 21:01:00,946 INFO - __main__ - Finished loading the dataset.\n",
+      "2023-11-05 21:01:01,203 INFO - trainers.golem_trainer - Started training for 100000.0 iterations.\n",
+      "2023-11-05 21:01:01,205 INFO - trainers.golem_trainer - [Iter 0] score 7.200E+12, likelihood 1.396E+02, h 1.440E+12\n",
+      "2023-11-05 21:01:04,050 INFO - trainers.golem_trainer - [Iter 5000] score 1.157E+10, likelihood 1.383E+02, h 2.314E+09\n",
+      "2023-11-05 21:01:06,881 INFO - trainers.golem_trainer - [Iter 10000] score 9.739E+08, likelihood 1.278E+02, h 1.948E+08\n",
+      "2023-11-05 21:01:09,681 INFO - trainers.golem_trainer - [Iter 15000] score 9.265E+07, likelihood 1.183E+02, h 1.853E+07\n",
+      "2023-11-05 21:01:12,530 INFO - trainers.golem_trainer - [Iter 20000] score 9.113E+06, likelihood 1.133E+02, h 1.823E+06\n",
+      "2023-11-05 21:01:15,591 INFO - trainers.golem_trainer - [Iter 25000] score 9.288E+05, likelihood 1.121E+02, h 1.857E+05\n",
+      "2023-11-05 21:01:18,838 INFO - trainers.golem_trainer - [Iter 30000] score 9.958E+04, likelihood 1.120E+02, h 1.989E+04\n",
+      "^C\n",
+      "2023-11-05 21:01:20,183 CRITICAL - utils.logger - Unhandled exception.\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/main.py\", line 70, in <module>\n",
       "    main()\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/main.py\", line 41, in main\n",
-      "    dataset = SyntheticDataset(args.n, args.d, args.graph_type, args.degree,\n",
-      "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/data_loader/synthetic_dataset.py\", line 44, in __init__\n",
-      "    self._setup()\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/data_loader/synthetic_dataset.py\", line 49, in _setup\n",
-      "    self.B_bin = SyntheticDataset.simulate_random_dag(self.d, self.degree,\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/data_loader/synthetic_dataset.py\", line 120, in simulate_random_dag\n",
-      "    B_bin = SyntheticDataset.simulate_er_dag(d, degree, rs)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/data_loader/synthetic_dataset.py\", line 76, in simulate_er_dag\n",
-      "    B_und_bin = _graph_to_adjmat(G_und)    # Undirected\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/data_loader/synthetic_dataset.py\", line 72, in _graph_to_adjmat\n",
-      "    return nx.to_numpy_matrix(G)\n",
-      "           ^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: module 'networkx' has no attribute 'to_numpy_matrix'\n"
+      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/main.py\", line 56, in main\n",
+      "    B_est = golem(dataset.X, args.lambda_1, args.lambda_2, args.equal_variances, args.num_iter,\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/golem.py\", line 48, in golem\n",
+      "    B_est = trainer.train(model, X, num_iter, checkpoint_iter, output_dir)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/trainers/golem_trainer.py\", line 44, in train\n",
+      "    score, likelihood, h, B_est = self.train_iter(model, X)\n",
+      "                                  ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/valen/Documents/GitHub/golem/golem_PT/src/trainers/golem_trainer.py\", line 84, in train_iter\n",
+      "    model.train_op.zero_grad()\n",
+      "  File \"/Users/valen/anaconda3/lib/python3.11/site-packages/torch/_compile.py\", line 20, in inner\n",
+      "    @functools.wraps(fn)\n",
+      "    \n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
