--- a/replication.ipynb
+++ b/replication.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Using our methods to replicate the results from DAGMA"
+   ]
   },
   {
    "cell_type": "code",
